<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Boobluk</string>
    <string name="info_about_reset_password">Enter the email associated with your account and we\'ll send an email with instructions to reset your password.</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="username_is_empty">Username is empty</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="username_is_too_short">Username is too short</string>
    <string name="password_do_not_match">Password don\'t match</string>
    <string name="check_email_to_confirm_account">Please check your email to confirm your account</string>
    <string name="check_email_to_get_instructions">Please check your email to get instructions</string>
    <string name="find_yourself_an_interlocutor">Find yourself an interlocutor, just write his nickname</string>
    <string name="we_cannot_show_your_password">We cannot show you the current password, it\'s dangerous</string>
    <string name="all_changes_saved">All changes have been saved</string>
    <string name="username_is_wrong">Username is wrong</string>
    <string name="bio_is_empty">Bio is empty</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="do_not_have_an_account">Don\'t have an account? Sign Up!</string>
    <string name="have_an_account">Have an account? Sign In!</string>
</resources>